# heatermodel

./: README.md  challenge.ipynb  driver.sh  pyproject.toml  requirements.txt
instances/: example.toml  example_no_bounds.toml
results/example/: model.lp
results/example_2/: model.lp
results/example_bounds/: model.lp  objective_function.csv  power_heater.csv  temperature_house.csv
results/example_no_bounds/: model.lp  objective_function.csv  power_heater.csv  temperature_house.csv
simulate/: __init__.py  __main__.py  utils.py
simulate/core/: __init__.py  inputs.py  plotter.py  simulator.py
simulate/core/optimiser/: __init__.py  constraints.py  objective_function.py  optimiser.py
